Referral to snapshots

--- a/cortex/gui/gui_client/index.html
+++ b/cortex/gui/gui_client/index.html
@@ -41,7 +41,7 @@
       <script>
         function build_user_snapshots_url() {
           var user_snapshots_url =
-            "/users/id=" +             
+            "/snapshots/id=" +             
             document.getElementById('user_id').value;
           var user_snapshots_form = document.getElementById("user_snapshots_form");
           user_snapshots_form.action = user_snapshots_url;
