--- a/cortex/gui/gui_client/snapshots.html
+++ b/cortex/gui/gui_client/snapshots.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head>    
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <!-- Bootstrap -->
@@ -29,31 +29,31 @@
     ></script>
     <!-- Custom chart libraries -->
     <!-- D3.js multiline graph chart -->
-    <script src="multiline_graph/multiline_graph.js"></script>
+    <script src="../multiline_graph/multiline_graph.js"></script>
     <!-- D3.js radar chart -->
-    <script src="js/radar_Chart.js"></script>
+    <script src="../js/radar_Chart.js"></script>
     <!-- Chart.js -->
-    <script src="js/Chart.js"></script>
+    <script src="../js/Chart.js"></script>
     <!-- Chart.js bar chart -->
-    <script src="js/bar_chart.js"></script>
+    <script src="../js/bar_chart.js"></script>
     <!-- Dark mode -->
-    <script src="js/dark_mode.js"></script>
+    <script src="../js/dark_mode.js"></script>
     <!-- CSS -->
     <link
-      href="multiline_graph/multiline_graph.css"
+      href="../multiline_graph/multiline_graph.css"
       rel="stylesheet"
       type="text/css"
       media="all"
     />
-    <link href="css/cortex.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="../css/cortex.css" rel="stylesheet" type="text/css" media="all" />
     <link
-      href="css/dark_mode.css"
+      href="../css/dark_mode.css"
       rel="stylesheet"
       type="text/css"
       media="all"
     />
     <link
-      href="css/snapshots.css"
+      href="../css/snapshots.css"
       rel="stylesheet"
       type="text/css"
       media="all"
@@ -91,7 +91,7 @@
     </div>
 
     <!-- Visualization Manager -->
-    <script src="js/visualization_manager.js"></script>
+    <script src="../js/visualization_manager.js"></script>
     <script>
       window.vmVisualizationManager = new VisualizationManager();
       // TODO : Replace with real data
