Client size adjastment

--- a/cortex/gui/gui_client/snapshots.html
+++ b/cortex/gui/gui_client/snapshots.html
@@ -66,17 +66,17 @@
 
     <div class="wrapper">
       <div class="child_item_1">
-        <img id="color_image" src="" width="200" height="200" />
+        <img id="color_image" src="" alt="Color Image" width="300" height="300" />
       </div>
       <div class="child_item_2">
-        <img id="depth_image" src="" width="200" height="200" />
+        <img id="depth_image" src="" alt="Depth Image" width="300" height="300" />
       </div>
 
       <div class="child_item_3">
-        <canvas id="bar_chart_translation" width="200" height="200"></canvas>
+        <canvas id="bar_chart_translation" width="300" height="300"></canvas>
       </div>
       <div class="child_item_4">
-        <canvas id="bar_chart_rotation" width="200" height="200"></canvas>
+        <canvas id="bar_chart_rotation" width="300" height="300"></canvas>
       </div>
 
       <div class="child_item_5">
