--- a/cortex/gui/gui_client/snapshots.html
+++ b/cortex/gui/gui_client/snapshots.html
@@ -27,6 +27,8 @@
       data-semver="3.5.3"
       src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.js"
     ></script>
+    <!-- Utilities -->
+    <script src="../js/utilities.js"></script>
     <!-- Custom chart libraries -->
     <!-- D3.js multiline graph chart -->
     <script src="../multiline_graph/multiline_graph.js"></script>
@@ -99,12 +101,7 @@
       <div class="child_item_5">
         <div id="user_feelings"></div>
       </div>
-
-      <!-- 
-        <div class="child_item_6">          
-          <div id="radar_chart"></div>          
-        </div>
-        -->
+      
     </div>
 
     <!-- Prevent relaod popup -->
