Better general embedding of data  in GUI

--- a/cortex/gui/gui_client/index.html
+++ b/cortex/gui/gui_client/index.html
@@ -36,7 +36,7 @@
   </head>
 
   <body>
-    <h1 class="search_header">Cortex</h1>
+    <h1 class="cortex_header">Cortex</h1>
     <center>
       <script>
         function build_user_snapshots_url() {
