--- a/cortex/gui/gui_client/index.html
+++ b/cortex/gui/gui_client/index.html
@@ -35,9 +35,13 @@
     <link href="css/index.css" rel="stylesheet" type="text/css" media="all" />
   </head>
 
-  <body>
-    <h1 class="cortex_header">Cortex</h1>
+  <!-- Icon -->
+  <link rel="icon" href="img/cortex.ico">
+
+  <body>    
+    <title>Cortex</title>
     <center>
+      <img id="logo" src="img/CortexLogo.png" height="auto" max-width="200px"></img>
       <script>
         function build_user_snapshots_url() {
           var user_snapshots_url =
