--- a/cortex/gui/gui_client/snapshots.html
+++ b/cortex/gui/gui_client/snapshots.html
@@ -67,7 +67,11 @@
     />
   </head>
 
+  <!-- Icon -->
+  <link rel="icon" href="img/cortex.ico">
+
   <body>
+    <title>%username%'s Snapshots</title>
     <h1 class="centered">%username%'s Snapshots</h1>
 
     <div class="wrapper">
