Solving binding to all interfaces

--- a/cortex/gui/gui_client/snapshots.html
+++ b/cortex/gui/gui_client/snapshots.html
@@ -68,7 +68,7 @@
   </head>
 
   <!-- Icon -->
-  <link rel="icon" href="img/cortex.ico">
+  <link rel="icon" href="../img/cortex.ico">
 
   <body>
     <title>%username%'s Snapshots</title>
