Fix dark mode relaod

--- a/cortex/gui/gui_client/snapshots.html
+++ b/cortex/gui/gui_client/snapshots.html
@@ -172,6 +172,8 @@
             document.querySelector("#layer_loader").style.display = "none";
             document.querySelector("#layer_content").style.visibility =
               "visible";
+            // Reload dark mode handler to applay on new items
+            window.dhDarkModeHandler.reloadDarkMode();
           },
         });
       </script>
